--- a/pages/people.html
+++ b/pages/people.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="align-items: center; padding: 0 2em;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="align-items: center;">
         <a class="navbar-brand logoText" href="#">Logo</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,19 +40,143 @@
 
             </ul>
         </div>
-        <div class="collapse navbar-collapse containerButtonsLogin"  id="navbarSupportedContent"> 
+        <div class="collapse navbar-collapse containerButtonsLogin" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item" style="display:flex; align-items:center;">
-                    <a class="nav-link buttonsLogin buttonLogout" href="#" ><img src="../assets/register-icon.svg" class="onlyPc">
+                    <a class="nav-link buttonsLogin buttonLogout" href="#"><img src="../assets/register-icon.svg"
+                            class="onlyPc">
                         Salir</a>
                 </li>
-                <li class="nav-item" >
+                <li class="nav-item">
                     <a class="nav-link" href="#"><img src="../assets/settings-icon.png" class="onlyPc">
-                        <span class="onlyPhone">Ajustes</span></a> 
-                    </li>
+                        <span class="onlyPhone">Ajustes</span></a>
+                </li>
             </ul>
         </div>
     </nav>
+    <div class="titleContainer">Informe Individual</div>
+    <div class="container" style="margin-top: 3em;">
+        <div class="row">
+            <div class="col-12 col-md-4">
+                <div class="card cardBlue" style="position: relative; padding-top: 70px; margin-top: 50px;">
+                    <div class="profileImageCard">
+                        <img src="../assets/profile.png">
+                    </div>
+                    <div class="percentualProfile">
+                        <span class="strongTitle blueTilte" style="font-size: 1.8em;">90%</span>
+                        <div class="loadPercentual">
+                            <div class="innerBarLoadPercentual" style="width: 90%;"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card cardOrange">
+                    <div>
+                        <img src="../assets/user-icon.png">
+                        <span class="strongTitle orangeTitle">MARÍA GOMEZ ROSAS</span>
+                    </div>
+                    <div>
+                        <img src="../assets/profession-icon.png">
+                        <span>Auxiliar Contable</span>
+                    </div>
+                    <div>
+                        <img src="../assets/earth-icon.png">
+                        <span>Actualmente en Bogota</span>
+                    </div>
+                </div>
+
+                <span class="strongTitle orangeTitle">Background</span>
+                <div class="card cardOrange">
+                    <div>
+                        <img src="../assets/calendar-icon.png">
+                        <span>28 años</span>
+                    </div>
+                    <div>
+                        <img src="../assets/studies-icon.png">
+                        <span>Técnico</span>
+                    </div>
+                    <div>
+                        <img src="../assets/money-icon.png">
+                        <span>$2'500.000 a $3'500.000</span>
+                    </div>
+                </div>
+
+                <span class="strongTitle orangeTitle">Habilidades</span>
+                <div class="card cardOrange containerOptionsPercentual">
+                    <div>
+                        <div class="imgContainer">
+                            <img src="../assets/laptop-icon.png">
+                        </div>
+                        <span>Excel</span>
+                        <div class="loadPercentual">
+                            <div class="innerBarLoadPercentual" style="width: 90%;">90%</div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="imgContainer">
+                            <img src="../assets/phone-icon.png">
+                        </div>
+                        <span>Siigo</span>
+                        <div class="loadPercentual">
+                            <div class="innerBarLoadPercentual" style="width: 85%;">85%</div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="imgContainer">
+                            <img src="../assets/book-icon.png">
+                        </div>
+                        <span>Helisa</span>
+                        <div class="loadPercentual">
+                            <div class="innerBarLoadPercentual" style="width: 70%;">70%</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-12 col-md-8">
+                <div class="card cardBlue">
+                    <span class="strongTitle blueTitle">Résumen</span>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                        invidunt
+                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+                        duo
+                        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+                        dolor
+                        sit amet. Lorem.
+                    </p>
+                </div>
+                <div class="card cardBlueDark">
+                    <span class="strongTitle blueTitle">Intereses</span>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                        invidunt
+                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+                        duo
+                        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.
+                    </p>
+                </div>
+                <div class="card cardBlue leadersContainers">
+                    <span class="strongTitle blueTitle">Logros</span>
+                    <div>
+                        <img src="../assets/leader-icon.png">
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt ut labore et.</p>
+                    </div>
+                    <div>
+                        <img src="../assets/leader-icon.png">
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt ut labore et.</p>
+                    </div>
+                    <div>
+                        <img src="../assets/leader-icon.png">
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt ut labore et.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
